--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
     line-height: 1;
+    background: #89d66b
   }
   
   textarea{
@@ -48,7 +49,7 @@ body {
   }
   
   .present {
-    background-color: #ff6961;
+    background-color: #6ed147;
     color: white;
   }
   
